--- a/core/app/views/InboundRecords/index.html
+++ b/core/app/views/InboundRecords/index.html
@@ -44,6 +44,13 @@
       #{/list}
       </select>
 
+      <select name="p.cooperatorId" class="inline selectize" style="width: 100px;">
+        <option value="">供应商</option>
+      #{list items: cooperators, as:'c'}
+        <option ${c.id == p.cooperatorId ? 'selected' : ''} value="${c.id}">${c.name}</option>
+      #{/list}
+      </select>
+
       <div class="input-prepend input-append inline">
         <span class="add-on"><i class="icon-search"></i></span>
         <input type="text" name="p.search" placeholder="质检任务 ID Or 物料采购 ID Or FBA Or 物料 ID" value="${p.search}"
