--- a/core/app/views/FBAs/boxLabel.html
+++ b/core/app/views/FBAs/boxLabel.html
@@ -8,36 +8,29 @@
     }
   </style>
 </head>
-<body>
-<table border="0" style="border: none;margin:0 0 0 0;" cellpadding="0" cellspacing="0" width="100%" height="100%">
+<body style="margin:0 0 0 0;">
+
+<table border="0" style="border: none;margin:0 0 0 0;" cellpadding="0" cellspacing="0" width="100%">
 #{list items:1..boxNumber, as: 'i'}
-  <tr>
-
-    <td width="49%">
-    #{if models.OperatorConfig.getVal("addressname")=='Brandworl'}
-        #{render './brandworlShipmentDetail.html', procureUnit: procureUnit/}
-    #{/if}
-    #{else}
-       #{render './shipmentDetail.html', procureUnit: procureUnit/}
+  <tr style="height: 98.6mm; vertical-align:middle;">
+    <td width="49%" style="vertical-align:middle">
+        #{if models.OperatorConfig.getVal("addressname")=='Brandworl'}
+            #{render './brandworlShipmentDetail.html', procureUnit: procureUnit/}
+        #{/if}
+            #{else}
+        #{render './shipmentDetail.html', procureUnit: procureUnit/}
     #{/else}
-
     </td>
-
-
-    <td width="2%">
-    </td>
-    <td width="49%">
+    <td width="2%"></td>
+    <td width="49%" style="vertical-align:middle">
         #{render './fba.html', isexpress: isexpress,shipmentId: shipmentId, fba: fba, shipFrom: shipFrom,
-        boxNumber: procureUnit.numberToStr(i)/}
+          boxNumber: procureUnit.numberToStr(i)/}
     </td>
   </tr>
-    #{if !i_isLast }
-      <tr>
-        <td height="20px;" colspan="3"></td>
-      </tr>
-    #{/if}
 #{/list}
 </table>
+
+
 </body>
 </html>
 
