--- a/core/app/views/FBAs/fba.html
+++ b/core/app/views/FBAs/fba.html
@@ -1,4 +1,4 @@
-<table border="0" style="border: none;margin:0 0 0 0;display:inline-block;" cellpadding="0" cellspacing="0"
+<table border="0" style="border: none;display:inline-block;" cellpadding="0" cellspacing="0"
        width="100%">
   <tr>
     <td colspan="3" align="center" style="color: #666666; font-weight: bold;font-size: 10pt;">
@@ -15,7 +15,6 @@
   <tr valign="top">
     <td width="50%" colspan="2" style="font-size:10px;line-height:10px;">
       <b>SHIP FROM:</b><br>
-
 
     ${shipFrom?.name}<br>
     ${shipFrom?.addressLine1}<br>
