--- a/core/app/views/FBAs/shipmentDetail.html
+++ b/core/app/views/FBAs/shipmentDetail.html
@@ -1,41 +1,40 @@
 <table border="0" style="border: none;margin:0 0 0 0;display:inline-block;" cellpadding="0" cellspacing="0"
        width="100%">
   <tr style="border-bottom: 2px solid black">
-    <td colspan="7" align="center" style="font-weight: bold;font-size: 6pt;border-bottom: 2px solid
-    black">
+    <td colspan="7" align="center" style="font-weight: bold;font-size: 6pt;border-bottom: 2px solid black">
       <div style="float:left;">
-                <span style="font-size: 14pt;">${models.OperatorConfig.getVal("brandname")}</span>
-             </div>
+        <span style="font-size: 14pt;">${models.OperatorConfig.getVal("brandname")}</span>
+      </div>
       <span style="font-weight: bold; font-size: 12pt">${models.OperatorConfig.getVal("shipmentdetaillabel")}</span><br>
       ONLY FOR ${models.OperatorConfig.getVal("companyname")} PACKING LIST
     </td>
   </tr>
 
   <tr valign="center" style="font-size: 7pt;font-weight: bold;">
-     <td>
-       <table border="0" width="100%" style="border: none;margin:0 0 0 0;padding:0;">
-         <tr>
-           <td width="10%" >
-              供应商:
-           </td>
-           <td width="20%" style="border-bottom: 2px solid black">
-             <span style="font-size:8pt">${procureUnit?.cooperator?.name}</span>
-           </td>
-           <td width="4%">
-              交期:
-           </td>
-           <td width="18%" style="text-align:left;" COLSPAN="4">
+    <td>
+      <table border="0" width="100%" style="border: none;margin:0 0 0 0;padding:0;">
+        <tr>
+          <td width="10%">
+            供应商:
+          </td>
+          <td width="20%" style="border-bottom: 2px solid black">
+            <span style="font-size:8pt">${procureUnit?.cooperator?.name}</span>
+          </td>
+          <td width="4%">
+            交期:
+          </td>
+          <td width="18%" style="text-align:left;" COLSPAN="4">
             <SPAN>${procureUnit?.attrs?.deliveryDate==null?procureUnit?.attrs?.planDeliveryDate?.format("yyyy年MM月dd日")
             :procureUnit?.attrs?.deliveryDate?.format("yyyy年MM月dd日")} </SPAN>
-           </td>
-           <td  width="20%" style="font-weight:bold; font-size:12pt">
-                运输方式
-           </td>
-           <td  style="border-bottom: 2px solid black">
-             <span style="font-size:8pt"> ${procureUnit?.shipType?.label()} </span>
-           </td>
-         </tr>
-       </table>
+          </td>
+          <td width="20%" style="font-weight:bold; font-size:12pt">
+            运输方式
+          </td>
+          <td style="border-bottom: 2px solid black">
+            <span style="font-size:8pt"> ${procureUnit?.shipType?.label()} </span>
+          </td>
+        </tr>
+      </table>
     </td>
   </tr>
   <tr style="font-size: 7pt" align="center">
@@ -52,7 +51,7 @@
             去往国家
           </td>
           <td width="12%" style="border:1px solid #000000; padding-left:6px;">
-            ${procureUnit?.selling?.market?.countryName()}
+          ${procureUnit?.selling?.market?.countryName()}
           </td>
           <td width="8%">
             整箱重量
@@ -70,12 +69,12 @@
     </td>
   </tr>
   <tr align="center">
-    <td >
+    <td>
       <table border="1" width="100%" height="100%" style="border:4px solid #000000;table-layout: fixed;
-      word-wrap:break-word;" cellpadding="0" cellspacing="0" >
-         <tr v>
+      word-wrap:break-word;" cellpadding="0" cellspacing="0">
+        <tr v>
           <th width="18%">
-             <span style="font-weight: bold;">产品名称</span>
+            <span style="font-weight: bold;">产品名称</span>
           </th>
           <th width="16%">
             <span style="font-weight: bold;">SKU</span>
@@ -86,31 +85,31 @@
           <th width="8%">
             <span style="font-weight: bold;">数量</span>
           </th>
-         </tr>
-         <tr >
-           <td height="35px;">
-             ${procureUnit?.product?.abbreviation}
-           </td>
-           <td>
-             ${procureUnit?.sku}
-           </td>
-           <td>
-            ${procureUnit?.selling?.fnSku}
-           </td>
-           <td>
-           </td>
-         </tr>
-         <tr>
-           <td height="110px;" colspan="4" style="vertical-align:top;text-align:left;" >
+        </tr>
+        <tr>
+          <td height="35px;">
+          ${procureUnit?.product?.abbreviation}
+          </td>
+          <td>
+          ${procureUnit?.sku}
+          </td>
+          <td>
+          ${procureUnit?.selling?.fnSku}
+          </td>
+          <td>
+          </td>
+        </tr>
+        <tr>
+          <td height="100%;" colspan="4" style="vertical-align:top;text-align:left;">
 
-           </td>
-         </tr>
+          </td>
+        </tr>
       </table>
     </td>
   </tr>
   <tr>
-    <td  align="center" style=" font-size: 8px;">
-         INTERNAL USE
+    <td align="center" style=" font-size: 8px;">
+      INTERNAL USE
     </td>
   </tr>
 </table>
