修复运输单发票PDF文件不显示标题问题

--- a/core/app/views/Shipments/invoice.html
+++ b/core/app/views/Shipments/invoice.html
@@ -59,8 +59,7 @@
   <tr>
     <td colspan="5" class="td1">
       <div class="div1">
-        <img src="${System.getenv(helper.Constant.ROOT_URL)}/images/common/${models.OperatorConfig.getVal("companyphoto")}"
-             style="height:100%">
+        <img src="http://127.0.0.1:9000/images/common/${models.OperatorConfig.getVal("companyphoto")}" style="height:100%">
       </div>
     </td>
   </tr>
