--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -246,6 +246,9 @@
                 #{power.ck "stockrecords.index"}
                   <li><a href="@{StockRecords.index()}">库存异动</a></li>
                 #{/power.ck}
+                #{power.ck "receiverecords.index"}
+                  <li><a href="@{ReceiveRecords.index()}">收货记录</a></li>
+                #{/power.ck}
             </ul>
           </li>
         #{/power.ck}
