--- a/core/app/views/ReceiveRecords/index.html
+++ b/core/app/views/ReceiveRecords/index.html
@@ -165,43 +165,43 @@
           <td>${r.procureUnit?.shipType?.label()}</td>
           <td>${r.procureUnit?.qty()}</td>
           <td>
-            <input type="text" name="qty" value="${r.qty}">
+            <input type="text" name="qty" value="${r.qty}" style="width:10px;">
           </td>
           <td>
-            <input type="text" name="mainBox.boxNum" value="${r.mainBox?.boxNum}">
+            <input type="text" name="mainBox.boxNum" value="${r.mainBox?.boxNum}" style="width:10px;">
           </td>
           <td>
-            <input type="text" name="mainBox.num" value="${r.mainBox?.num}">
+            <input type="text" name="mainBox.num" value="${r.mainBox?.num}" style="width:10px;">
           </td>
           <td>
-            <input type="text" name="mainBox.singleBoxWeight" value="${r.mainBox?.singleBoxWeight}">
+            <input type="text" name="mainBox.singleBoxWeight" value="${r.mainBox?.singleBoxWeight}" style="width:10px;">
           </td>
           <td>
-            <input type="text" name="mainBox.length" value="${r.mainBox?.length}">
+            <input type="text" name="mainBox.length" value="${r.mainBox?.length}" style="width:10px;">
           </td>
           <td>
-            <input type="text" name="mainBox.width" value="${r.mainBox?.width}">
+            <input type="text" name="mainBox.width" value="${r.mainBox?.width}" style="width:10px;">
           </td>
           <td>
-            <input type="text" name="mainBox.height" value="${r.mainBox?.height}">
+            <input type="text" name="mainBox.height" value="${r.mainBox?.height}" style="width:10px;">
           </td>
           <td>
-            <input type="text" name="lastBoxInfo.boxNum" value="${r.lastBoxInfo?.boxNum}">
+            <input type="text" name="lastBoxInfo.boxNum" value="${r.lastBoxInfo?.boxNum}" style="width:10px;">
           </td>
           <td>
-            <input type="text" name="lastBoxInfo.num" value="${r.lastBoxInfo?.num}">
+            <input type="text" name="lastBoxInfo.num" value="${r.lastBoxInfo?.num}" style="width:10px;">
           </td>
           <td>
-            <input type="text" name="lastBoxInfo.singleBoxWeight" value="${r.lastBoxInfo?.singleBoxWeight}">
+            <input type="text" name="lastBoxInfo.singleBoxWeight" value="${r.lastBoxInfo?.singleBoxWeight}" style="width:10px;">
           </td>
           <td>
-            <input type="text" name="lastBoxInfo.length" value="${r.lastBoxInfo?.length}">
+            <input type="text" name="lastBoxInfo.length" value="${r.lastBoxInfo?.length}" style="width:10px;">
           </td>
           <td>
-            <input type="text" name="lastBoxInfo.width" value="${r.lastBoxInfo?.width}">
+            <input type="text" name="lastBoxInfo.width" value="${r.lastBoxInfo?.width}" style="width:10px;">
           </td>
           <td>
-            <input type="text" name="lastBoxInfo.height" value="${r.lastBoxInfo?.height}">
+            <input type="text" name="lastBoxInfo.height" value="${r.lastBoxInfo?.height}" style="width:10px;">
           </td>
           <td>#{time_tooltip time: r.createDate, datetime: true/}</td>
           <td>#{time_tooltip time: r.confirmDate, datetime: true/}</td>
