*  调整 CheckTask show 页面

--- a/core/app/views/CheckTasks/_uploadFile.html
+++ b/core/app/views/CheckTasks/_uploadFile.html
@@ -4,15 +4,16 @@
   </div>
 </div>
 <div class="row-fluid">
-  <div style="min-height:300px;" class="span12 well" id="dropbox">
+  <div style="min-height:240px;" class="span10 well" id="dropbox">
     <ul class="thumbnails uploaded"></ul>
-    <div class="message" style="height:150px;padding-top:145px;text-align:center;">拖拽文件到此上传</div>
+    <div class="message" style="padding-top:80px;text-align:center;">拖拽文件到此上传</div>
   </div>
-</div>
-
-<div class="row-fluid">
   <div class="span2">
     <div id="file_home" data-fid="${check.id}"></div>
     <input type="button" class="btn btn-default btn-block" value="上传" id="submit_button" data-loading>
   </div>
+</div>
+
+<div class="row-fluid">
+
 </div>
