--- a/core/app/views/CheckTasks/show.html
+++ b/core/app/views/CheckTasks/show.html
@@ -5,5 +5,4 @@
 #{flash_alert /}
 #{errorMsgs /}
 
-#{render 'CheckTasks/_show.html', check: check,ap: ap,issubmit: issubmit,infos: infos,taskname: taskname,unit: unit,
-oldPlanQty: oldPlanQty, whouses: whouses/}
+#{include 'CheckTasks/_show.html'/}
