--- a/core/app/views/DeliverPlans/index.html
+++ b/core/app/views/DeliverPlans/index.html
@@ -16,21 +16,18 @@
       <span class="add-on">To:</span>
       <input type="date" name="p.to" value="${p.to.date()}">
     </div>
-
-    <select name="p.cooperId" class="inline">
-      <option value="">供应商</option>
-        #{list items:suppliers, as:'sp'}
-          <option ${sp.id == p.cooperId ? 'selected' : ''} value="${sp.id}">${sp.name}</option>
-        #{/list}
-    </select>
-
     <select name="p.planState" class="inline">
       <option value="">状态</option>
         #{list items:models.procure.DeliverPlan.P.values(), as:'sp'}
           <option ${sp == p.planState ? 'selected' : ''} value="${sp.name()}">${sp.label()}</option>
         #{/list}
     </select>
-
+    <select name="p.cooperId" class="inline selectize" style="width: 100px;">
+      <option value="">供应商</option>
+        #{list items:suppliers, as:'sp'}
+          <option ${sp.id == p.cooperId ? 'selected' : ''} value="${sp.id}">${sp.name}</option>
+        #{/list}
+    </select>
     <div class="input-prepend input-append inline">
       <span class="add-on"><i class="icon-search"></i></span>
       <input type="text" name="p.search" class="input-medium" value="${p.search}" placeHolder="搜索 id 自动识别, +N 语法">
